--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/claw.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OpenClaw Manager</title>
     <style>
-      /* 防止 FOUC */
+      /* Prevent FOUC */
       html {
         background-color: #0a0a0b;
       }
-      /* 自定义滚动条 */
+      /* Custom scrollbar */
       ::-webkit-scrollbar {
         width: 8px;
         height: 8px;
